@@ -66,3 +66,4 @@ Version: V0.5B5 Date: Sat Feb 25 18:49:43 2006 +++++++++++++++++++++++++++++++
 + PropertyVectorList implemented
 + Use PropertyVectorLists and PropertyFloatLists in Mesh::Curvature feature and its associated view provider
 + PropertyColor(List) implemeted
++ PropertyMeshKernel added
